Improve error messages for disabled beans (#8326)
* Improve error messages for disabled beans

* make sure bean disabled errors are unique

* address CR